--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,18 @@ uuid = "fc7e833f-a3b9-439d-ae82-c6ad11a3e54b"
 authors = ["Andrea Pagnani", "Jeanne Trinquier", "Guido Uguzzoni", "Martin Weigt", "Francesco Zamponi"]
 version = "0.1.0"
 
+[deps]
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+ExtractMacro = "f86d3d12-fd5b-522c-99e9-61577282a1e9"
+GaussDCA = "bc09176e-aa47-5a77-a802-92a0219fe3db"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
+
 [compat]
 julia = "1.5"
 
