--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,12 +55,8 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Pkg
-            if isfile("Manifest.toml")
-              Pkg.activate(pwd())
-            else
-              Pkg.develop(PackageSpec(path=pwd()))
-              Pkg.instantiate()
-            end'
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.instantiate()'
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
