--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,10 @@ authors = ["Andrea Pagnani", "Jeanne Trinquier", "Guido Uguzzoni", "Martin Weigt
 version = "0.1.0"
 
 [deps]
+CorrDCA = "71fba74b-94bb-4624-adc3-6f657ac12af8"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ExtractMacro = "f86d3d12-fd5b-522c-99e9-61577282a1e9"
-GaussDCA = "bc09176e-aa47-5a77-a802-92a0219fe3db"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
