--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Distributions = "0.24, 0.25"
 ExtractMacro = "1.0"
 LoopVectorization = "0.9, 0.11, 0.12"
 NLopt = "0.6"
+PrecompileTools = "1"
 julia = "1.5"
 
 [extras]
