--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,9 @@ ExtractMacro = "1.0"
 LoopVectorization = "0.9, 0.11, 0.12"
 NLopt = "0.6, 1"
 PrecompileTools = "1"
+LinearAlgebra = "1.5"
+Printf = "1.5"
+Random = "1.5"
 julia = "1.5"
 
 [extras]
